add more optimizations